# algoritmo-e-estrutura-de-dados-1

./: CMakeLists.txt
exercicios/lista1/: ex1.c  ex2.c  ex3.c  ex4.c
livroAlgoritmoC/: P1.c  P2.c  P3.c  P4.c
livroAlgoritmoC/Capitulo 1/: P2.c
livroAlgoritmoC/Capitulo 2/: 2D.c
livroAlgoritmoC/capitulo-1/: P1.c  P3.c  P4.c
livroAlgoritmoC/capitulo-2/: 2A.c  2B.c  2C.c
livroAlgoritmoC/capitulo-4/: E1.c  E2.c  E3.c  E4.c  E5.c  E6.c  E8.c  E9.c  a.c
