cmake_minimum_required(VERSION 3.28)
project(AED1 C)

set(CMAKE_C_STANDARD 11)

add_executable(AED1 main.c)

add_executable(P1 "livroAlgoritmoC/Capitulo 1/P1.c")
add_executable(P2 "livroAlgoritmoC/Capitulo 1/P2.c")
add_executable(P3 "livroAlgoritmoC/Capitulo 1/P3.c")
add_executable(P4 "livroAlgoritmoC/Capitulo 1/P4.c")
add_executable(2A "livroAlgoritmoC/Capitulo 2/2A.c")
add_executable(2B "livroAlgoritmoC/Capitulo 2/2B.c")
add_executable(2C "livroAlgoritmoC/Capitulo 2/2C.c")
add_executable(2D "livroAlgoritmoC/Capitulo 2/2D.c")
