cmake_minimum_required(VERSION 3.28)
project(AED1 C)

set(CMAKE_C_STANDARD 11)

add_executable(AED1 main.c)

add_executable(P1 livroAlgoritmoC/capitulo-1/P1.c)
add_executable(P2 livroAlgoritmoC/capitulo-1/P2.c)
add_executable(P3 livroAlgoritmoC/capitulo-1/P3.c)
add_executable(P4 livroAlgoritmoC/capitulo-1/P4.c)
add_executable(2A livroAlgoritmoC/capitulo-2/2A.c)
add_executable(2B livroAlgoritmoC/capitulo-2/2B.c) 
add_executable(2C livroAlgoritmoC/capitulo-2/2C.c)
add_executable(2D livroAlgoritmoC/capitulo-2/2D.c)
add_executable(E1 livroAlgoritmoC/capitulo-4/E1.c
        livroAlgoritmoC/capitulo-4/a.c)
add_executable(E2 livroAlgoritmoC/capitulo-4/E2.c)
add_executable(E3 livroAlgoritmoC/capitulo-4/E3.c)
add_executable(E4 livroAlgoritmoC/capitulo-4/E4.c)
add_executable(E5 livroAlgoritmoC/capitulo-4/E5.c)
add_executable(E6 livroAlgoritmoC/capitulo-4/E6.c)
add_executable(E7 livroAlgoritmoC/capitulo-4/E7.c)
add_executable(E8 livroAlgoritmoC/capitulo-4/E8.c)
add_executable(E9 livroAlgoritmoC/capitulo-4/E9.c)
add_executable(E10 livroAlgoritmoC/capitulo-4/E10.c)
add_executable(E11 livroAlgoritmoC/capitulo-4/E11.c)
add_executable(E12 livroAlgoritmoC/capitulo-4/E12.c)
add_executable(ex1 exercicios/lista1/ex1.c)
add_executable(ex2 exercicios/lista1/ex2.c)
add_executable(ex3 exercicios/lista1/ex3.c)
add_executable(ex4 exercicios/lista1/ex4.c)
add_executable(ex5 exercicios/lista2/ex1.c)
